--- a/views/released.html
+++ b/views/released.html
@@ -20,7 +20,7 @@
                 <section id="banner" data-video="images/banner">
                     <div class="inner">
                         <header>
-                            <h1>Full Motion</h1>
+                            <h1></h1>
                             <p>A responsive video gallery template with a functional lightbox<br />
                             designed by <a href="https://templated.co/">Templated</a> and released under the Creative Commons License.</p>
                         </header>
@@ -95,7 +95,13 @@
                 </div>
 
         <!--Display text and a tv image-->
-        <h3>TV</h3>
+        <section id="main">
+          <div class="inner">
+            <div class="main">
+          <h3>TV Shows</h3>
+            </div>
+          </div>
+        </section>
         <br>
         <p>Welcome to our website TV show recorded by the member of our server</p>
         <div class="thumbnails">
